objects/OpportunityTeamMember.object
<CustomObject>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
                <value>
                    <fullName>Value2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>primary</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>